Move to new project for nuget.

--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     <AWSProjectType>Lambda</AWSProjectType>
   </PropertyGroup>
@@ -12,5 +12,8 @@
     <PackageReference Include="AWSSDK.CognitoIdentityProvider" Version="3.3.107" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.101.87" />
     <PackageReference Include="AwsTools" Version="1.0.18" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PropertyRentalManagement\PropertyRentalManagement.csproj" />
   </ItemGroup>
 </Project>
